--- a/index.html
+++ b/index.html
@@ -5,10 +5,211 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
+    <!--! Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!--! header start -->
+    <header id="header">
+        <div id="global-notification">
+            <p>
+                SUMMER SALE FOR ALL SWIM SUITS AND FREE
+                EXPRESS INTERNATIONAL DELIVERY - OFF 50%!
+            </p>
+            <a href="shop.html">SHOP NOW</a>
+        </div>
+        <div id="header-row">
+            <div class="container">
+                <div id="header-wrapper">
+                    <div id="header-left">
+                        <a href="#" class="logo">LOGO</a>
+                    </div>
+                    <div id="header-center">
+                        <nav id="navigation">
+                            <ul id="menu-list">
+                                <li class="menu-list-item">
+                                    <a href="#" class="menu-link active">
+                                        Home
+                                        <i class="bi bi-chevron-down"></i>
+                                    </a>
+                                    <div class="menu-dropdown-wrapper">
+                                        <ul class="menu-dropdown-content">
+                                            <li>
+                                                <a href="#">Home Clean</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Collection</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Minimal</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Modern</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Parallax</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Strong</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Style</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home Unique</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Home RTL</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="menu-list-item megamenu-wrapper">
+                                    <a href="#" class="menu-link">
+                                        Shop
+                                        <i class="bi bi-chevron-down"></i>
+                                    </a>
+                                    <div class="menu-dropdown-wrapper">
+                                        <div class="menu-dropdown-megamenu">
+                                            <div class="megamenu-links">
+                                                <div class="megamenu-products">
+                                                    <h3 class="megamenu-product-title">
+                                                        Shop Style
+                                                    </h3>
+                                                    <ul class="megamenu-menu-list">
+                                                        <li>
+                                                            <a href="#">Shop Standart</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Full</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Only Categories</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Image Categories<a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Sub Categories</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Liste</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Style 1</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Style 2</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Style 3</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                                <div class="megamenu-products">
+                                                    <h3 class="megamenu-product-title">
+                                                        Filter Layout
+                                                    </h3>
+                                                    <ul class="megamenu-menu-list">
+                                                        <li>
+                                                            <a href="#">Sidebar</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Filter Side Out</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Filter Dropdown</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Filter Drawer<a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                                <div class="megamenu-products">
+                                                    <h3 class="megamenu-product-title">
+                                                        Shop Loader
+                                                    </h3>
+                                                    <ul class="megamenu-menu-list">
+                                                        <li>
+                                                            <a href="#">Shop Pagination</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Infinity</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Shop Load More</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Cart Modal<a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Cart Drawer</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Cart Page</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="megamenu-single">
+                                                <a href="#">
+                                                    <img src="img/mega-menu.jpg" alt="mega-menu">
+                                                </a>
+                                                <h3 class="megamenu-single-title">JOIN THE LAYERING GANG</h3>
+                                                <p class="megamenu-single-subtitle">Suspendisse faucibus nunc et
+                                                    pellentesque</p>
+                                                <a href="#" class="megamenu-single-button">Shop Now</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="menu-list-item">
+                                    <a href="#" class="menu-link">
+                                        Blog
+                                        <i class="bi bi-chevron-down"></i>
+                                    </a>
+                                </li>
+                                <li class="menu-list-item">
+                                    <a href="#" class="menu-link">
+                                        Contact
+                                        <i class="bi bi-chevron-down"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div id="header-right">
+                        <div id="header-right-links">
+                            <div id="header-account">
+                                <a href="#">
+                                    <i class="bi bi-person"></i>
+                                </a>
+                            </div>
+                            <div id="header-search">
+                                <a href="#">
+                                    <i class="bi bi-search"></i>
+                                </a>
+                            </div>
+                            <div id="header-heart">
+                                <a href="#">
+                                    <i class="bi bi-heart"></i>
+                                </a>
+                            </div>
+                            <div id="header-bag">
+                                <a href="#">
+                                    <i class="bi bi-bag"></i>
+                                    <span id="header-cart-count">0</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--! header end -->
 </body>
 
 </html>
