header responsive completed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div id="header-row">
             <div class="container">
                 <div id="header-wrapper">
+                    <div id="header-mobile">
+                        <i class="bi bi-list"></i>
+                    </div>
                     <div id="header-left">
                         <a href="#" class="logo">LOGO</a>
                     </div>
@@ -178,6 +181,7 @@
                                     </a>
                                 </li>
                             </ul>
+                            <i class="bi bi-x-circle"></i>
                         </nav>
                     </div>
                     <div id="header-right">
