--- a/index.html
+++ b/index.html
@@ -245,6 +245,42 @@
         </div>
     </section>
     <!--! modal search end -->
+
+    <!--! slider start -->
+    <section id="slider">
+        <div id="slider-elements">
+            <div class="slider-item">
+                <div class="slider-image">
+                    <img src="img/slider/slider3.jpg" class="img-fluid" alt="slider3 ">
+                </div>
+                <div class="container">
+                    <p class="slider-title">SUMMER 2022</p>
+                    <h2 class="slider-heading">Save up to 70%</h2>
+                    <a href="#" class="btn btn-lg btn-primary">Explore Now</a>
+                </div>
+            </div>
+            <div class="slider-buttons">
+                <button>
+                    <i class="bi bi-chevron-left"></i>
+                </button>
+                <button>
+                    <i class="bi bi-chevron-right"></i>
+                </button>
+            </div>
+            <div class="slider-dots">
+                <button class="slider-dot active">
+                    <span></span>
+                </button>
+                <button class="slider-dot">
+                    <span></span>
+                </button>
+                <button class="slider-dot">
+                    <span></span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!--! slider end -->
 </body>
 
 </html>
