--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <!--! header start -->
     <header id="header">
         <div id="global-notification">
-            <p>
-                SUMMER SALE FOR ALL SWIM SUITS AND FREE
-                EXPRESS INTERNATIONAL DELIVERY - OFF 50%!
-            </p>
-            <a href="shop.html">SHOP NOW</a>
+            <div class="container">
+                <p>
+                    SUMMER SALE FOR ALL SWIM SUITS AND FREE
+                    EXPRESS INTERNATIONAL DELIVERY - OFF 50%!
+                </p>
+                <a href="shop.html">SHOP NOW</a>
+            </div>
         </div>
         <div id="header-row">
             <div class="container">
@@ -281,6 +283,55 @@
         </div>
     </section>
     <!--! slider end -->
+
+    <!--! categories start  -->
+    <section id="categories">
+        <div class="container">
+            <div class="section-title">
+                <h2>All Categories</h2>
+                <p>Summer Collection New Modern Design</p>
+            </div>
+            <ul class="category-list">
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories1.png" class="category-image img-fluid" alt="categories1">
+                        <span class="category-title">Smartphone</span>
+                    </a>
+                </li>
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories2.png" class="category-image img-fluid" alt="categories2">
+                        <span class="category-title">Watches</span>
+                    </a>
+                </li>
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories3.png" class="category-image img-fluid" alt="categories3">
+                        <span class="category-title">Electronics</span>
+                    </a>
+                </li>
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories4.png" class="category-image img-fluid" alt="categories4">
+                        <span class="category-title">Furnitures</span>
+                    </a>
+                </li>
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories5.png" class="category-image img-fluid" alt="categories5">
+                        <span class="category-title">Collections</span>
+                    </a>
+                </li>
+                <li class="category-list-item">
+                    <a href="#">
+                        <img src="img/categories/categories6.png" class="category-image img-fluid" alt="categories6">
+                        <span class="category-title">Fashion</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--! categories end -->
 </body>
 
 </html>
