--- a/index.html
+++ b/index.html
@@ -332,6 +332,209 @@
         </div>
     </section>
     <!--! categories end -->
+
+    <!--! products start -->
+    <section id="products">
+        <div class="container">
+            <div class="section-title">
+                <h2>Featured Products</h2>
+                <p>Summer Collection New Modern Design</p>
+            </div>
+            <div class="product-wrapper">
+                <ul class="product-list">
+                    <li class="product-list-item">
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="img/products/product1/1.png" class="img1 img-fluid" alt="product1">
+                                <img src="img/products/product1/2.png" class="img2 img-fluid" alt="product1">
+                            </a>
+                        </div>
+                        <div class="product-info">
+                            <a href="#" class="product-title">Analogue Resin Strap</a>
+                            <ul class="product-star">
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-half"></i>
+                                </li>
+                            </ul>
+                            <div class="product-prices">
+                                <strong>$108.00</strong>
+                                <span>$165.00</span>
+                            </div>
+                            <span class="product-discount">-17%</span>
+                            <div class="product-links">
+                                <button>
+                                    <i class="bi bi-basket-fill"></i>
+                                </button>
+                                <button>
+                                    <i class="bi bi-heart-fill"></i>
+                                </button>
+                                <a href="#">
+                                    <i class="bi bi-eye-fill"></i>
+                                </a>
+                                <button>
+                                    <i class="bi bi-share-fill"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="img/products/product2/1.png" class="img1 img-fluid" alt="product2">
+                                <img src="img/products/product2/2.png" class="img2 img-fluid" alt="product2">
+                            </a>
+                        </div>
+                        <div class="product-info">
+                            <a href="#" class="product-title">Ridley High Waist</a>
+                            <ul class="product-star">
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-half"></i>
+                                </li>
+                            </ul>
+                            <div class="product-prices">
+                                <strong>$108.00</strong>
+                                <span>$165.00</span>
+                            </div>
+                            <span class="product-discount">-17%</span>
+                            <div class="product-links">
+                                <button>
+                                    <i class="bi bi-basket-fill"></i>
+                                </button>
+                                <button>
+                                    <i class="bi bi-heart-fill"></i>
+                                </button>
+                                <a href="#">
+                                    <i class="bi bi-eye-fill"></i>
+                                </a>
+                                <button>
+                                    <i class="bi bi-share-fill"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="img/products/product3/1.png" class="img1 img-fluid" alt="product3">
+                                <img src="img/products/product3/2.png" class="img2 img-fluid" alt="product3">
+                            </a>
+                        </div>
+                        <div class="product-info">
+                            <a href="#" class="product-title">Blush Beanie</a>
+                            <ul class="product-star">
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-half"></i>
+                                </li>
+                            </ul>
+                            <div class="product-prices">
+                                <strong>$108.00</strong>
+                                <span>$165.00</span>
+                            </div>
+                            <span class="product-discount">-17%</span>
+                            <div class="product-links">
+                                <button>
+                                    <i class="bi bi-basket-fill"></i>
+                                </button>
+                                <button>
+                                    <i class="bi bi-heart-fill"></i>
+                                </button>
+                                <a href="#">
+                                    <i class="bi bi-eye-fill"></i>
+                                </a>
+                                <button>
+                                    <i class="bi bi-share-fill"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="img/products/product4/1.png" class="img1 img-fluid" alt="product4">
+                                <img src="img/products/product4/2.png" class="img2 img-fluid" alt="product4">
+                            </a>
+                        </div>
+                        <div class="product-info">
+                            <a href="#" class="product-title">Mercury Tee</a>
+                            <ul class="product-star">
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-fill"></i>
+                                </li>
+                                <li>
+                                    <i class="bi bi-star-half"></i>
+                                </li>
+                            </ul>
+                            <div class="product-prices">
+                                <strong>$108.00</strong>
+                                <span>$165.00</span>
+                            </div>
+                            <span class="product-discount">-17%</span>
+                            <div class="product-links">
+                                <button>
+                                    <i class="bi bi-basket-fill"></i>
+                                </button>
+                                <button>
+                                    <i class="bi bi-heart-fill"></i>
+                                </button>
+                                <a href="#">
+                                    <i class="bi bi-eye-fill"></i>
+                                </a>
+                                <button>
+                                    <i class="bi bi-share-fill"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!--! products item end -->
 </body>
 
 </html>
