--- a/index.html
+++ b/index.html
@@ -535,6 +535,45 @@
         </div>
     </section>
     <!--! products item end -->
+
+    <!--! campaigns start -->
+    <section id="campaigns">
+        <div class="container">
+            <div class="campaign-wrapper">
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="campaign-wrapper">
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--! campaigns end -->
 </body>
 
 </html>
