--- a/index.html
+++ b/index.html
@@ -844,6 +844,45 @@
         </div>
     </section>
     <!--! blogs end -->
+
+    <!--! brands start -->
+    <section id="brands">
+        <div class="container">
+            <ul class="brand-list">
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand1.png" alt="brand1">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand2.png" alt="brand2">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand3.png" alt="brand3">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand4.png" alt="brand4">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand5.png" alt="brand5">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand1.png" alt="brand1">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--! brands end -->
 </body>
 
 </html>
