campaign-single completed

--- a/index.html
+++ b/index.html
@@ -883,6 +883,29 @@
         </div>
     </section>
     <!--! brands end -->
+
+    <!--! campaign single start -->
+    <section id="campaign-single">
+        <div class="campaign-wrapper">
+            <h2>New Season Sale</h2>
+            <strong>40% OFF</strong>
+            <span></span>
+            <a href="#" class="btn btn-lg">Shop Now <i class="bi bi-arrow-right"></i></a>
+        </div>
+    </section>
+    <!--! campaign single end -->
+
+    <!--! policy start -->
+    <section id="policy">
+        <div class="container"></div>
+    </section>
+    <!--! policy end -->
+
+    <!--! footer start -->
+    <footer id="footer">
+        <div class="container"></div>
+    </footer>
+    <!--! footer end -->
 </body>
 
 </html>
