contact page completed

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </li>
                                 <li class="menu-list-item megamenu-wrapper">
-                                    <a href="#" class="menu-link">
+                                    <a href="shop.html" class="menu-link">
                                         Shop
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -171,15 +171,13 @@
                                     </div>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">
+                                    <a href="blog.html" class="menu-link">
                                         Blog
-                                        <i class="bi bi-chevron-down"></i>
                                     </a>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">
+                                    <a href="contact.html" class="menu-link">
                                         Contact
-                                        <i class="bi bi-chevron-down"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -951,7 +949,7 @@
                             <div class="footer-subscribe-bottom">
                                 <form>
                                     <input type="text" placeholder="Enter your email address">
-                                    <button class="btn">Subscribe</button>
+                                    <button class="btn btn-dark">Subscribe</button>
                                 </form>
                                 <p class="privacy-text">
                                     By subscribing you agree to our <a href="#">Terms & Conditions and Privacy & Cookies
