--- a/card.html
+++ b/card.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Card</title>
     <!--! Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -35,7 +35,7 @@
                         <nav id="navigation">
                             <ul id="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link">
+                                    <a href="index.html" class="menu-link active">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -176,7 +176,7 @@
                                     </a>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="contact.html" class="menu-link active">
+                                    <a href="contact.html" class="menu-link">
                                         Contact
                                     </a>
                                 </li>
@@ -246,93 +246,24 @@
     </section>
     <!--! modal search end -->
 
-    <!--! contact start -->
-    <section id="contact">
-        <div class="contact-top">
-            <div class="contact-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201550.47901837973!2d32.34167288498778!3d37.87839162544021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d08568d615f745%3A0x240dd0fc08060967!2sKonya!5e0!3m2!1str!2str!4v1706958499937!5m2!1str!2str"
-                    width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-        <div class="contact-bottom">
-            <div class="container">
-                <div class="contact-titles">
-                    <h2>
-                        Get In Touch
-                    </h2>
-                    <h4>
-                        Contact with us
-                    </h4>
-                    <p>
-                        In hac habitasse platea dictumst. Pellentesque viverra sem nec orci lacinia, in bibendum urna
-                        mollis. Quisque nunc lacus, varius vel leo a, pretium lobortis metus. Vivamus consectetur
-                        consequat justo.
-                    </p>
-
-                </div>
-                <div class="contact-elements">
-                    <div class="contact-form">
-                        <div>
-                            <label>
-                                Your Name
-                                <span>*</span>
-                            </label>
-                            <input type="text" required>
-                        </div>
-                        <div>
-                            <label>
-                                Your Email
-                                <span>*</span>
-                            </label>
-                            <input type="text" required>
-                        </div>
-                        <div>
-                            <label>
-                                Your Subject
-                                <span>*</span>
-                            </label>
-                            <textarea required></textarea>
-                        </div>
-                        <div>
-                            <label>
-                                Your Message
-                                <span>*</span>
-                            </label>
-                            <textarea required></textarea>
-                        </div>
-                        <button class="btn btn-dark">Send Message</button>
-                    </div>
-                    <div class="contact-info">
-                        <div class="contact-info-item">
-                            <div class="contact-info-texts">
-                                <strong>Clotya Store</strong>
-                                <p class="contact-street">Clotya Store Germany — 785 15h Street, Office 478/B Green Mall
-                                    Berlin, De 81566
-                                    <br>
-                                    <br>
-                                    <a href="tel:+1 1234 567 88">Phone: +1 1234 567 88
-                                    </a><br>
-                                    <a href="mailto:contact@example.com">Email: contact@example.com</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="contact-info-item">
-                            <div class="contact-info-texts">
-                                <strong>Opening Hours</strong>
-                                <p class="contact-date">Monday - Friday : 9am - 5pm
-                                    Weekend Closed
-                                </p>
-                            </div>
+    <!--! card start -->
+    <section id="card">
+        <div class="container">
+            <div class="card-page-wrapper">
+                <div class="card-form">
+                    <div class="free-progress-bar">
+                        <p class="progress-bar-title">
+                            Add <strong>$161.00</strong> to card and get free shipping!
+                        </p>
+                        <div class="progress-bar">
+                            <span class="progress"></span>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
-    <!--! contact end -->
+    <!--! card end -->
 
     <!--! policy start -->
     <section id="policy">
@@ -390,7 +321,7 @@
                             <div class="footer-subscribe-bottom">
                                 <form>
                                     <input type="text" placeholder="Enter your email address">
-                                    <button class="btn">Subscribe</button>
+                                    <button class="btn btn-dark">Subscribe</button>
                                 </form>
                                 <p class="privacy-text">
                                     By subscribing you agree to our <a href="#">Terms & Conditions and Privacy & Cookies
