--- a/blog.html
+++ b/blog.html
@@ -197,7 +197,7 @@
                     <div id="header-right">
                         <div id="header-right-links">
                             <div id="header-account">
-                                <a href="#">
+                                <a href="account.html">
                                     <i class="bi bi-person"></i>
                                 </a>
                             </div>
