--- a/shop.html
+++ b/shop.html
@@ -187,7 +187,7 @@
                     <div id="header-right">
                         <div id="header-right-links">
                             <div id="header-account">
-                                <a href="#">
+                                <a href="account.html">
                                     <i class="bi bi-person"></i>
                                 </a>
                             </div>
