card page completed

--- a/account.html
+++ b/account.html
@@ -202,7 +202,7 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="#">
+                                <a href="card.html">
                                     <i class="bi bi-bag"></i>
                                     <span id="header-cart-count">0</span>
                                 </a>
