--- a/blog.html
+++ b/blog.html
@@ -212,7 +212,7 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="#">
+                                <a href="shop.html">
                                     <i class="bi bi-bag"></i>
                                     <span id="header-cart-count">0</span>
                                 </a>
