--- a/card.html
+++ b/card.html
@@ -202,7 +202,7 @@
                                 </a>
                             </div>
                             <div id="header-bag">
-                                <a href="#">
+                                <a href="shop.html">
                                     <i class="bi bi-bag"></i>
                                     <span id="header-cart-count">0</span>
                                 </a>
@@ -257,6 +257,94 @@
                         </p>
                         <div class="progress-bar">
                             <span class="progress"></span>
+                        </div>
+                    </div>
+                    <div class="shop-table-wrapper">
+                        <table class="shop-table">
+                            <thead>
+                                <tr>
+                                    <th class="product-thumbnail">&nbsp;</th>
+                                    <th class="product-name">Product</th>
+                                    <th class="product-price">Price</th>
+                                    <th class="product-quantity">Quantity</th>
+                                    <th class="product-subtotal">Subtotal</th>
+                                </tr>
+                            </thead>
+                            <tbody class="card-wrapper">
+                                <tr class="card-item">
+                                    <td>
+                                        <div class="card-image">
+                                            <img src="img/products/product1/1.png" alt="product1">
+                                            <i class="bi bi-x delete-card"></i>
+                                        </div>
+                                    </td>
+                                    <td>Analogue Resin Strap</td>
+                                    <td>$108.00</td>
+                                    <td class="product-quantity">1</td>
+                                    <td class="product-subtotal">$108.00</td>
+                                </tr>
+                                <tr class="card-item">
+                                    <td>
+                                        <div class="card-image">
+                                            <img src="img/products/product2/1.png" alt="product2">
+                                            <i class="bi bi-x delete-card"></i>
+                                        </div>
+                                    </td>
+                                    <td>Ridley High Waist</td>
+                                    <td>$108.00</td>
+                                    <td class="product-quantity">1</td>
+                                    <td class="product-subtotal">$108.00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="actions-wrapper">
+                            <div class="coupon">
+                                <input type="text" class="input-text" placeholder="Coupon code">
+                                <button class="btn btn-dark btn-md">Apply Coupon</button>
+                            </div>
+                            <div class="update-card">
+                                <button class="btn btn-danger">Update Card</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-collaterals">
+                    <div class="card-totals">
+                        <h2>Card Totals</h2>
+                        <table>
+                            <tbody>
+                                <tr class="card-subtotal">
+                                    <th>Subtotal</th>
+                                    <td>
+                                        <span id="subtotal">$316.00</span>
+                                    </td>
+                                </tr>
+                                <tr class="card-shipping">
+                                    <th>Shipping</th>
+                                    <td>
+                                        <ul>
+                                            <li>
+                                                <label>
+                                                    Fast Cargo : $15.00
+                                                    <input type="checkbox">
+                                                </label>
+                                            </li>
+                                            <li>
+                                                <a href="#">Change Address</a>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Total</th>
+                                    <td>
+                                        <strong>$316.00</strong>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="checkout">
+                            <button class="btn btn-danger btn-lg ">Proceed to checkout</button>
                         </div>
                     </div>
                 </div>
