header js completed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div id="header-wrapper">
                     <div id="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
                         <a href="#" class="logo">LOGO</a>
@@ -181,7 +181,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <i class="bi bi-x-circle"></i>
+                            <i class="bi bi-x-circle" id="close-sidebar"></i>
                         </nav>
                     </div>
                     <div id="header-right">
@@ -192,7 +192,7 @@
                                 </a>
                             </div>
                             <div id="header-search">
-                                <a href="#">
+                                <a href="#" id="search-button">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </div>
@@ -241,7 +241,7 @@
                     </a>
                 </div>
             </div>
-            <i class="bi bi-x-circle"></i>
+            <i class="bi bi-x-circle" id="close-search"></i>
         </div>
     </section>
     <!--! modal search end -->
@@ -1117,6 +1117,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
