product info completed

--- a/product-details.html
+++ b/product-details.html
@@ -269,7 +269,7 @@
                     </nav>
                 </div>
                 <div class="single-content">
-                    <main>
+                    <main class="site-main">
                         <div class="product-gallery">
                             <div class="single-image-wrapper">
                                 <img src="img/products/product2/1.png" class="img-fluid" alt="product2">
@@ -295,7 +295,105 @@
                                 </ol>
                             </div>
                         </div>
-                        <div class="product-info"></div>
+                        <div class="product-info">
+                            <div class="product-title">
+                                Ridley High Waist
+                            </div>
+                            <div class="product-review">
+                                <ul class="product-star">
+                                    <li><i class="bi bi-star-fill"></i></li>
+                                    <li><i class="bi bi-star-fill"></i></li>
+                                    <li><i class="bi bi-star-fill"></i></li>
+                                    <li><i class="bi bi-star-fill"></i></li>
+                                    <li><i class="bi bi-star-half"></i></li>
+                                </ul>
+                                <span>2 reviews</span>
+                            </div>
+                            <div class="product-price">
+                                <s>$208</s>
+                                <strong>$165</strong>
+                            </div>
+                            <p class="product-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <form class="variations-form">
+                                <div class="variations">
+                                    <div class="colors">
+                                        <div class="colors-label">
+                                            <span>Color</span>
+                                        </div>
+                                        <div class="colors-wrapper">
+                                            <div class="color-wrapper active">
+                                                <label class="blue-color">
+                                                    <input type="radio" name="product-color">
+                                                </label>
+                                            </div>
+                                            <div class="color-wrapper">
+                                                <label class="red-color">
+                                                    <input type="radio" name="product-color">
+                                                </label>
+                                            </div>
+                                            <div class="color-wrapper">
+                                                <label class="green-color">
+                                                    <input type="radio" name="product-color">
+                                                </label>
+                                            </div>
+                                            <div class="color-wrapper">
+                                                <label class="purple-color">
+                                                    <input type="radio" name="product-color">
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="values">
+                                        <div class="values-label">
+                                            <span>Size</span>
+                                        </div>
+                                        <div class="values-list">
+                                            <span>XS</span>
+                                            <span>S</span>
+                                            <span class="active">M</span>
+                                            <span>L</span>
+                                            <span>XL</span>
+                                        </div>
+                                    </div>
+                                    <div class="card-button">
+                                        <input type="number" value="1" min="1">
+                                        <button class="btn btn-lg btn-primary">Add to card</button>
+                                    </div>
+                                    <div class="product-extra-buttons">
+                                        <a href="#">
+                                            <i class="bi bi-globe"></i>
+                                            <span>Size Guide</span>
+                                        </a>
+                                        <a href="#">
+                                            <i class="bi bi-heart"></i>
+                                            <span>Add to Wishlist</span>
+                                        </a>
+                                        <a href="#">
+                                            <i class="bi bi-share"></i>
+                                            <span>Share this product</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </form>
+                            <div class="divider"></div>
+                            <div class="product-meta">
+                                <div class="product-sku">
+                                    <span>SKU:</span>
+                                    <strong>BE45VGRT</strong>
+                                </div>
+                                <div class="product-categories">
+                                    <span>Categories:</span>
+                                    <strong>Pants,Man</strong>
+                                </div>
+                                <div class="product-tags">
+                                    <span>Tags:</span>
+                                    <strong>Black,white</strong>
+                                </div>
+                            </div>
+                        </div>
                     </main>
                 </div>
             </div>
