product info page completed except comment form

--- a/index.html
+++ b/index.html
@@ -904,11 +904,15 @@
 
     <!--! campaign single start -->
     <section id="campaign-single">
-        <div class="campaign-wrapper">
-            <h2>New Season Sale</h2>
-            <strong>40% OFF</strong>
-            <span></span>
-            <a href="#" class="btn btn-lg">Shop Now <i class="bi bi-arrow-right"></i></a>
+        <div class="container">
+            <section id="campaign-single-wrapper">
+                <div class="campaign-wrapper">
+                    <h2>New Season Sale</h2>
+                    <strong>40% OFF</strong>
+                    <span></span>
+                    <a href="#" class="btn btn-lg">Shop Now <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </section>
         </div>
     </section>
     <!--! campaign single end -->
