--- a/product-details.html
+++ b/product-details.html
@@ -396,10 +396,167 @@
                         </div>
                     </main>
                 </div>
+                <div class="single-tabs">
+                    <ul class="tab-list">
+                        <li>
+                            <a href="#" class="tab-button active">
+                                Description
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="tab-button">
+                                Additional Information
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="tab-button">
+                                Reviews
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="tab-panel">
+                        <div class="tab-panel-desc">
+                            <p>
+                                Quisque varius diam vel metus mattis, id aliquam diam rhoncus. Proin vitae magna in dui
+                                finibus malesuada et at nulla. Morbi elit ex, viverra vitae ante vel, blandit feugiat
+                                ligula. Fusce fermentum iaculis nibh, at sodales leo maximus a. Nullam ultricies sodales
+                                nunc, in pellentesque lorem mattis quis. Cras imperdiet est in nunc tristique lacinia.
+                                Nullam aliquam mauris eu accumsan tincidunt. Suspendisse velit ex, aliquet vel ornare
+                                vel, dignissim a tortor.
+                            </p>
+                            <br>
+                            <p>
+                                Quisque varius diam vel metus mattis, id aliquam diam rhoncus. Proin vitae magna in dui
+                                finibus malesuada et at nulla. Morbi elit ex, viverra vitae ante vel, blandit feugiat
+                                ligula. Fusce fermentum iaculis nibh, at sodales leo maximus a. Nullam ultricies sodales
+                                nunc, in pellentesque lorem mattis quis. Cras imperdiet est in nunc tristique lacinia.
+                                Nullam aliquam mauris eu accumsan tincidunt. Suspendisse velit ex, aliquet vel ornare
+                                vel, dignissim a tortor.
+
+                                New Season Sale
+                            </p>
+                        </div>
+                        <div class="tab-panel-information">
+                            <h3>Additional Information</h3>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <th>Color</th>
+                                        <td>
+                                            <p>Apple Red, Bio Blue, Sweet Orange, Blue, Green, Pink, Black, White</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Size</th>
+                                        <td>
+                                            <p>XXS, XS, S, M, L, XL, XXL
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-panel-reviews">
+                            <h3>2 reviews for Basic Colored Sweatpants With Elastic Hems
+                            </h3>
+                            <div class="comments">
+                                <ol class="comment-list">
+                                    <li class="comment-list-item">
+                                        <div class="comment-avatar">
+                                            <img src="img/avatars/avatar2.jpg" alt="">
+                                        </div>
+                                        <div class="comment-text">
+                                            <ul class="comment-star">
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-half"></i>
+                                                </li>
+                                            </ul>
+                                            <div class="comment-meta">
+                                                <strong>admin</strong>
+                                                -
+                                                <time>April 23,2023</time>
+                                            </div>
+                                            <div class="comment-desc">
+                                                <p>
+                                                    Sed perspiciatis unde omnis iste natus error sit voluptatem
+                                                    accusantium
+                                                    doloremque laudantium.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="comment-list-item">
+                                        <div class="comment-avatar">
+                                            <img src="img/avatars/avatar2.jpg" alt="">
+                                        </div>
+                                        <div class="comment-text">
+                                            <ul class="comment-star">
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-fill"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="bi bi-star-half"></i>
+                                                </li>
+                                            </ul>
+                                            <div class="comment-meta">
+                                                <strong>admin</strong>
+                                                -
+                                                <time>April 23,2023</time>
+                                            </div>
+                                            <div class="comment-desc">
+                                                <p>
+                                                    Sed perspiciatis unde omnis iste natus error sit voluptatem
+                                                    accusantium
+                                                    doloremque laudantium.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!--! single product end -->
+
+    <!--! campaign single start -->
+    <section id="campaign-single">
+        <div class="container">
+            <section id="campaign-single-wrapper">
+                <div class="campaign-wrapper">
+                    <h2>New Season Sale</h2>
+                    <strong>40% OFF</strong>
+                    <span></span>
+                    <a href="#" class="btn btn-lg">Shop Now <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </section>
+        </div>
+    </section>
+    <!--! campaign single end -->
 
     <!--! policy start -->
     <section id="policy">
