--- a/single-blog.html
+++ b/single-blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
+    <title>Single Blog</title>
     <!--! Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -26,7 +26,7 @@
             <div class="container">
                 <div id="header-wrapper">
                     <div id="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div id="header-left">
                         <a href="#" class="logo">LOGO</a>
@@ -35,7 +35,7 @@
                         <nav id="navigation">
                             <ul id="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="index.html" class="menu-link">
+                                    <a href="index.html" class="menu-link active">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -72,7 +72,7 @@
                                     </div>
                                 </li>
                                 <li class="menu-list-item megamenu-wrapper">
-                                    <a href="shop.html" class="menu-link active">
+                                    <a href="shop.html" class="menu-link">
                                         Shop
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -181,7 +181,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <i class="bi bi-x-circle"></i>
+                            <i class="bi bi-x-circle" id="close-sidebar"></i>
                         </nav>
                     </div>
                     <div id="header-right">
@@ -192,7 +192,7 @@
                                 </a>
                             </div>
                             <div id="header-search">
-                                <a href="#">
+                                <a href="#" id="search-button">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </div>
@@ -241,10 +241,66 @@
                     </a>
                 </div>
             </div>
-            <i class="bi bi-x-circle"></i>
+            <i class="bi bi-x-circle" id="close-search"></i>
         </div>
     </section>
     <!--! modal search end -->
+
+    <!--! slider start -->
+    <section id="slider">
+        <div id="slider-elements">
+            <div class="slider-item fade">
+                <div class="slider-image">
+                    <img src="img/slider/slider3.jpg" class="img-fluid" alt="slider3 ">
+                </div>
+                <div class="container">
+                    <p class="slider-title">SUMMER 2022</p>
+                    <h2 class="slider-heading">Save up to 70%</h2>
+                    <a href="#" class="btn btn-lg btn-primary">Explore Now</a>
+                </div>
+            </div>
+            <div class="slider-item fade">
+                <div class="slider-image">
+                    <img src="img/slider/slider2.jpg" class="img-fluid" alt="slider3 ">
+                </div>
+                <div class="container">
+                    <p class="slider-title">SUMMER 2022</p>
+                    <h2 class="slider-heading">Save up to 70%</h2>
+                    <a href="#" class="btn btn-lg btn-primary">Explore Now</a>
+                </div>
+            </div>
+            <div class="slider-item fade">
+                <div class="slider-image">
+                    <img src="img/slider/slider1.jpg" class="img-fluid" alt="slider3 ">
+                </div>
+                <div class="container">
+                    <p class="slider-title">SUMMER 2022</p>
+                    <h2 class="slider-heading">Save up to 70%</h2>
+                    <a href="#" class="btn btn-lg btn-primary">Explore Now</a>
+                </div>
+            </div>
+            <div class="slider-buttons">
+                <button onclick="plusSlide(-1)">
+                    <i class="bi bi-chevron-left"></i>
+                </button>
+                <button onclick="plusSlide(1)">
+                    <i class="bi bi-chevron-right"></i>
+                </button>
+            </div>
+            <div class="slider-dots">
+                <button class="slider-dot active" onclick="currentSlide(1)">
+                    <span></span>
+                </button>
+                <button class="slider-dot" onclick="currentSlide(2)">
+                    <span></span>
+                </button>
+                <button class="slider-dot" onclick="currentSlide(3)">
+                    <span></span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!--! slider end -->
 
     <!--! categories start  -->
     <section id="categories">
@@ -498,6 +554,45 @@
     </section>
     <!--! products item end -->
 
+    <!--! campaigns start -->
+    <section id="campaigns">
+        <div class="container">
+            <div class="campaign-wrapper">
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="campaign-wrapper">
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+                <div class="campaign-item">
+                    <h3 class="campaign-title">Fashion Month<br>
+                        Ready in Capital<br>
+                        Shop</h3>
+                    <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+                    <a href="#" class="btn btn-lg btn-primary">View All <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--! campaigns end -->
+
     <!--! products start -->
     <section id="products">
         <div class="container">
@@ -700,6 +795,112 @@
         </div>
     </section>
     <!--! products item end -->
+
+    <!--! blogs start -->
+    <section id="blogs">
+        <div class="container">
+            <div class="section-title">
+                <h2>From Our Blog</h2>
+                <p>Summer Collection New Modern Design</p>
+            </div>
+            <ul class="blog-list">
+                <li class="blog-item">
+                    <a href="#" class="blog-image">
+                        <img src="img/blogs/blog1.jpg" class="img-fluid" alt="blog1">
+                    </a>
+                    <div class="blog-info">
+                        <div class="blog-info-top">
+                            <span>25 Feb, 2023</span>
+                            -
+                            <span>0 Comments</span>
+                        </div>
+                        <div class="blog-info-center">
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="blog-info-bottom">
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="blog-item">
+                    <a href="#" class="blog-image">
+                        <img src="img/blogs/blog2.jpg" class="img-fluid" alt="blog1">
+                    </a>
+                    <div class="blog-info">
+                        <div class="blog-info-top">
+                            <span>25 Feb, 2023</span>
+                            -
+                            <span>0 Comments</span>
+                        </div>
+                        <div class="blog-info-center">
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="blog-info-bottom">
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="blog-item">
+                    <a href="#" class="blog-image">
+                        <img src="img/blogs/blog3.jpg" class="img-fluid" alt="blog1">
+                    </a>
+                    <div class="blog-info">
+                        <div class="blog-info-top">
+                            <span>25 Feb, 2023</span>
+                            -
+                            <span>0 Comments</span>
+                        </div>
+                        <div class="blog-info-center">
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="blog-info-bottom">
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--! blogs end -->
+
+    <!--! brands start -->
+    <section id="brands">
+        <div class="container">
+            <ul class="brand-list">
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand1.png" alt="brand1">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand2.png" alt="brand2">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand3.png" alt="brand3">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand4.png" alt="brand4">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand5.png" alt="brand5">
+                    </a>
+                </li>
+                <li class="brand-list-item">
+                    <a href="#">
+                        <img src="img/brands/brand1.png" alt="brand1">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--! brands end -->
 
     <!--! campaign single start -->
     <section id="campaign-single">
@@ -940,6 +1141,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
