product-details page completed

--- a/product-details.html
+++ b/product-details.html
@@ -535,6 +535,77 @@
                                     </li>
                                 </ol>
                             </div>
+                            <div class="review-form-wrapper">
+                                <h2>Add a review</h2>
+                                <form class="comment-form">
+                                    <p class="comment-notes">Your email will not be published.Required fields are marked
+                                        <span style="color: red;">*</span>
+                                    </p>
+                                    <div class="form-comment comment-form-rating">
+                                        <label>
+                                            Your rating
+                                            <span style="color: red;">*</span>
+                                        </label>
+                                        <div class="stars">
+                                            <a href="#" class="star">
+                                                <i class="bi bi-star-fill"></i>
+                                            </a>
+                                            <a href="#" class="star">
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                            </a>
+                                            <a href="#" class="star">
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                            </a>
+                                            <a href="#" class="star">
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                            </a>
+                                            <a href="#" class="star">
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="form-comment comment-form-comment">
+                                        <label for="comment">
+                                            Your Review
+                                            <span style="color: red;">*</span>
+                                        </label>
+                                        <textarea id="comment" rows="10" cols="50"></textarea>
+                                    </div>
+                                    <div class="form-comment comment-form-author">
+                                        <label for="author">
+                                            Name
+                                            <span style="color: red;">*</span>
+                                        </label>
+                                        <input id="author" type="text">
+                                    </div>
+                                    <div class="form-comment comment-form-email">
+                                        <label for="email">
+                                            Email
+                                            <span style="color: red;">*</span>
+                                        </label>
+                                        <input id="email" type="email">
+                                    </div>
+                                    <div class="form-comment comment-form-cookies">
+                                        <input id="checkbox" type="checkbox">
+                                        <label for="checkbox">
+                                            Save my name,email and website in this browser for the next time my comment.
+                                        </label>
+                                    </div>
+                                    <div class="form-submit">
+                                        <input type="submit" class="btn btn-dark" value="Submit">
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
