product-details links added

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -445,7 +445,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -492,7 +492,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -539,7 +539,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -640,7 +640,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -687,7 +687,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -734,7 +734,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -781,7 +781,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
