--- a/shop.html
+++ b/shop.html
@@ -342,7 +342,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -389,7 +389,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -436,7 +436,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -483,7 +483,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -545,7 +545,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -592,7 +592,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -639,7 +639,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
@@ -686,7 +686,7 @@
                                 <button>
                                     <i class="bi bi-heart-fill"></i>
                                 </button>
-                                <a href="#">
+                                <a href="product-details.html">
                                     <i class="bi bi-eye-fill"></i>
                                 </a>
                                 <button>
